changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Extract mood floor handling to its own type file.
 common/button.c
 include/sproto.h typesproto.h
 server/ob_types.c
 types/Makefile.am
 types/legacy/process.c
New file:
 types/mood_floor/mood_floor.c
Nicolas Weeger 2008-04-09

Extract marker handling to its own type file.
 common/button.c
 include/sproto.h typesproto.h
 random_maps/standalone.c
 server/ob_types.c time.c
 test/unit/common/stubs_common.c
 test/unit/random_maps/stubs_random.c
 test/unit/socket/stubs_socket.c
 utils/bwp.c mapper.c
 types/legacy/process.c
 types/Makefile.am
New file:
 types/marker/marker.c
Nicolas Weeger 2008-04-09

Extract creator handling to its own type file.
 common/button.c
 include/sproto.h typesproto.h
 random_maps/standalone.c
 server/ob_types.c time.c
 test/unit/common/stubs_common.c
 test/unit/random_maps/stubs_random.c
 test/unit/socket/stubs_socket.c
 utils/bwp.c mapper.c
 types/legacy/process.c
 types/Makefile.am
New file:
 types/creator/creator.c
Nicolas Weeger 2008-04-09

Extract teleporter handling to its own type file.
 common/button.c
 include/sproto.h typesproto.h
 random_maps/standalone.c
 server/ob_types.c time.c
 test/unit/common/stubs_common.c
 test/unit/random_maps/stubs_random.c
 test/unit/socket/stubs_socket.c
 utils/bwp.c mapper.c
 types/legacy/process.c
 types/Makefile.am
New file:
 types/teleporter/teleporter.c
Nicolas Weeger 2008-04-08

include/libproto.h: missing register_trigger prototype.
Nicolas Weeger 2008-04-08

New 'ob_trigger' object function.
 common/ob_methods.c ob_types.c
 include/libproto.h ob_methods.h
Nicolas Weeger 2008-04-08
